Fixed layout issue with pages

--- a/src/css/notebook.css
+++ b/src/css/notebook.css
@@ -46,10 +46,10 @@
 }
 
 .nb-output {
-    min-height: 1em;    
-    width: 100%;
-    overflow-x: scroll;
-    border-right: 1px dotted #CCC;
+    // min-height: 1em;    
+    // width: 100%;
+    // overflow-x: scroll;
+    // border-right: 1px dotted #CCC;
 }
 
 .nb-output img {
